--- a/style10.css
+++ b/style10.css
@@ -11,22 +11,13 @@
     width                : 97vw;
 }
 
-.big {
-    grid-area : big;
-    box-shadow: 0px 0px 0px 5px black;
-    overflow  : hidden;
-}
-
-.big-pictures {
-    display: flex;
-    width  : 100%;
-    height : 100%;
-}
 
 .big-picture {
-    width : 100%;
-    height: 100%;
-    flex  : 0 0 100%;
+    grid-area : big;
+    box-shadow: 0px 0px 0px 5px black;
+    width     : 100%;
+    height    : 100%;
+    object-fit: cover;
 }
 
 .small-picture {
