--- a/style.css
+++ b/style.css
@@ -51,5 +51,10 @@
 
 input {
     display: block;
-    margin : 20px auto;
+    margin : 5px auto 20px;
+}
+
+label {
+    display   : block;
+    text-align: center;
 }
