--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 td {
     width           : 50px;
     height          : 50px;
-    border          : 1px solid black;
-    background-color: #ccc;
+    border          : 1px solid rgb(0, 0, 0, 0.1);
+    background-color: rgb(116, 183, 238);
+    text-align      : center;
+    font-family     : Arial, Helvetica, sans-serif;
+    font-weight     : bold;
 }
 
 .wrapper {
@@ -13,14 +16,88 @@ td {
     margin-right: 100px;
 }
 
-.ship {
-    margin-bottom: 20px;
+.field2 {
+    position: relative;
 }
 
-#autoFillButton {
+table {
+    border         : 2px solid black;
+    border-spacing : 0;
+    border-collapse: collapse;
+}
+
+.hover {
+    cursor: crosshair;
+}
+
+.ship {
+    margin-bottom: 20px;
+    position     : relative;
+}
+
+.ship1 img {
+    position  : absolute;
+    top       : 23%;
+    opacity   : 100%;
+    width     : 100%;
+    max-height: 100%;
+    z-index   : -1;
+}
+
+.ship2 img {
+    position  : absolute;
+    top       : 25%;
+    opacity   : 100%;
+    width     : 160px;
+    max-height: 100%;
+    z-index   : -1;
+}
+
+.ship3 img {
+    position  : absolute;
+    top       : 32%;
+    opacity   : 100%;
+    width     : 107px;
+    max-height: 100%;
+    z-index   : -1;
+}
+
+.ship4 img {
+    position  : absolute;
+    top       : 12%;
+    opacity   : 100%;
+    width     : 54px;
+    max-height: 100%;
+    z-index   : -1;
+}
+
+
+.ships {
+    margin-left: 20px;
+}
+
+.ships table {
+    border: 0;
+}
+
+.ships td {
+    opacity         : 0%;
+    background-color: yellow;
+    border          : 0;
+}
+
+button {
     margin-top: 30px;
 }
 
 .inactive {
     display: none;
+}
+
+.start-battle-notice {
+    position   : absolute;
+    left       : 400px;
+    top        : 300px;
+    font-size  : 80px;
+    font-weight: bold;
 }
