--- a/style.css
+++ b/style.css
@@ -16,8 +16,13 @@ td {
     margin-right: 100px;
 }
 
-.field2 {
+.field1 table {
     position: relative;
+}
+
+.field2 table {
+    position    : relative;
+    margin-right: 50px;
 }
 
 table {
@@ -36,30 +41,27 @@ table {
 }
 
 .ship1 img {
-    position  : absolute;
-    top       : 23%;
-    opacity   : 100%;
-    width     : 100%;
-    max-height: 100%;
-    z-index   : -1;
+    position: absolute;
+    top     : 10px;
+    opacity : 100%;
+    width   : 210px;
+    z-index : -1;
 }
 
 .ship2 img {
-    position  : absolute;
-    top       : 25%;
-    opacity   : 100%;
-    width     : 160px;
-    max-height: 100%;
-    z-index   : -1;
+    position: absolute;
+    top     : 12px;
+    opacity : 100%;
+    width   : 160px;
+    z-index : -1;
 }
 
 .ship3 img {
-    position  : absolute;
-    top       : 32%;
-    opacity   : 100%;
-    width     : 107px;
-    max-height: 100%;
-    z-index   : -1;
+    position: absolute;
+    top     : 18px;
+    opacity : 100%;
+    width   : 107px;
+    z-index : -1;
 }
 
 .ship4 img {
@@ -72,8 +74,15 @@ table {
 }
 
 
+.rotate {
+    left            : 10px;
+    transform-origin: 10% 50%;
+    transform       : rotate(90deg);
+}
+
 .ships {
-    margin-left: 20px;
+    margin-left : 20px;
+    margin-right: auto;
 }
 
 .ships table {
