--- a/style.css
+++ b/style.css
@@ -1,8 +1,32 @@
+body {
+    position  : relative;
+    margin    : 0;
+    padding   : 100px 0 0 100px;
+    min-height: 100vh;
+    overflow  : hidden;
+}
+
+body::before {
+    content            : ' ';
+    display            : block;
+    position           : absolute;
+    left               : 0;
+    top                : 0;
+    width              : 100%;
+    height             : 100%;
+    opacity            : 0.8;
+    background-image   : url("images/background.jpg");
+    background-repeat  : no-repeat;
+    background-position: 50% 0;
+    background-size    : cover;
+    z-index            : -1;
+}
+
 td {
     width           : 50px;
     height          : 50px;
     border          : 1px solid rgb(0, 0, 0, 0.1);
-    background-color: rgb(116, 183, 238);
+    background-color: rgb(116, 183, 238, 0.5);
     text-align      : center;
     font-family     : Arial, Helvetica, sans-serif;
     font-weight     : bold;
@@ -17,12 +41,13 @@ td {
 }
 
 .field1 table {
-    position: relative;
+    position          : relative;
+    /*background-image: url('sea.jpeg');*/
 }
 
 .field2 table {
-    position    : relative;
-    margin-right: 50px;
+    position          : relative;
+    /*background-image: url('sea.jpeg');*/
 }
 
 table {
@@ -31,13 +56,20 @@ table {
     border-collapse: collapse;
 }
 
-.hover {
+.user-shoot:hover {
     cursor: crosshair;
 }
 
 .ship {
     margin-bottom: 20px;
     position     : relative;
+    display      : flex;
+}
+
+.ship-count {
+    margin-left: 20px;
+    align-self : center;
+    font-weight: bold;
 }
 
 .ship1 img {
@@ -81,7 +113,7 @@ table {
 }
 
 .ships {
-    margin-left : 20px;
+    margin-left : 50px;
     margin-right: auto;
 }
 
@@ -96,8 +128,16 @@ table {
 }
 
 button {
-    margin-top: 30px;
+    margin-top      : 30px;
+    margin-right    : 430px;
+    margin-bottom   : 50px;
+    border-radius   : 20px;
+    width           : 200px;
+    border          : 2px solid black;
+    background-color: yellow;
+    font-weight     : bold;
 }
+
 
 .inactive {
     display: none;
@@ -109,4 +149,31 @@ button {
     top        : 300px;
     font-size  : 80px;
     font-weight: bold;
+}
+
+.user-move-notice {
+    position   : absolute;
+    left       : 350px;
+    top        : 30px;
+    font-size  : 20px;
+    font-weight: bold;
+}
+
+.comp-move-notice {
+    position   : absolute;
+    left       : 900px;
+    top        : 30px;
+    font-size  : 20px;
+    font-weight: bold;
+}
+
+.rules {
+    font-size  : 20px;
+    font-family: Lobster;
+    width      : 1500px;
+}
+
+.red-border {
+    box-shadow: 0 0 10px 5px yellow;
+    transition: box-shadow 1s;
 }
