--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body::before {
 }
 
 td {
-    width           : 50px;
+    min-width           : 50px;
     height          : 50px;
     border          : 1px solid rgb(0, 0, 0, 0.1);
     background-color: rgb(116, 183, 238, 0.5);
