--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body::before {
 
 td {
     min-width           : 50px;
-    min-height          : 50px;
+    height          : 50px;
     border          : 1px solid rgb(0, 0, 0, 0.1);
     background-color: rgb(116, 183, 238, 0.5);
     text-align      : center;
