--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     position  : relative;
     margin    : 0;
-    padding   : 100px 0 0 100px;
+    padding   : 50px 0 0 50px;
     min-height: 100vh;
     overflow  : hidden;
 }
@@ -23,10 +23,10 @@ body::before {
 }
 
 td {
-    min-width           : 50px;
+    min-width       : 50px;
     height          : 50px;
-    border          : 1px solid rgb(0, 0, 0, 0.1);
-    background-color: rgb(116, 183, 238, 0.5);
+    border          : 1px solid rgb(0, 0, 0, 0.3);
+    background-color: rgb(116, 183, 238, 0.6);
     text-align      : center;
     font-family     : Arial, Helvetica, sans-serif;
     font-weight     : bold;
@@ -37,7 +37,7 @@ td {
 }
 
 .field1 {
-    margin-right: 100px;
+    margin-right: 50px;
 }
 
 .field1 table {
@@ -118,23 +118,36 @@ table {
 }
 
 .ships table {
-    border: 0;
+    border      : 0;
+    border-color: none;
 }
 
 .ships td {
-    opacity         : 0%;
-    border          : 0;
+    opacity: 0%;
+    border : 0;
 }
 
 button {
-    margin-top      : 30px;
-    margin-right    : 430px;
-    margin-bottom   : 50px;
+    justify-self    : center;
+    margin-right    : 10px;
+    margin-bottom   : 20px;
     border-radius   : 20px;
-    width           : 200px;
-    border          : 2px solid black;
     background-color: yellow;
     font-weight     : bold;
+    border          : 1px solid black;
+    box-shadow      : 1px 1px 0 0;
+    font-family     : Georgia, 'Times New Roman', Times, serif;
+    width           : 100px;
+    height          : 40px;
+    opacity         : 70%;
+}
+
+#startButton {
+    width: 210px;
+}
+
+button:active {
+    box-shadow: none;
 }
 
 
