--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ td {
     min-width       : 50px;
     height          : 50px;
     border          : 1px solid rgb(0, 0, 0, 0.3);
-    background-color: rgb(116, 183, 238, 0.6);
+    background-color: rgba(116, 183, 238, 0.6);
     text-align      : center;
     font-family     : Arial, Helvetica, sans-serif;
     font-weight     : bold;
@@ -115,6 +115,7 @@ table {
 .ships {
     margin-left : 50px;
     margin-right: auto;
+    width       : 300px;
 }
 
 .ships table {
@@ -188,4 +189,53 @@ button:active {
 .red-border {
     box-shadow: 0 0 10px 5px yellow;
     transition: box-shadow 1s;
+}
+
+.end-game-block {
+    position        : absolute;
+    border-radius   : 5px;
+    width           : 500px;
+    height          : 300px;
+    top             : -500px;
+    left            : 400px;
+    font-weight     : bold;
+    text-align      : center;
+    border          : 2px solid black;
+    background-color: coral;
+}
+
+.move-down {
+    transition: transform 500ms;
+    transform : translateY(700px);
+}
+
+.win-or-loose-text {
+    font-size  : 50px;
+    font-weight: bold;
+}
+
+.play-again {
+    display      : block;
+    margin       : 0 auto;
+    margin-top   : 10%;
+    margin-bottom: 20px;
+    width        : 20%;
+    height       : 12%;
+    font-size    : 80%;
+}
+
+.main-menu {
+    display: block;
+    margin : 0 auto;
+    width  : 20%;
+    height : 12%;
+}
+
+.end-game-background {
+    position: absolute;
+    top     : 0;
+    left    : 0;
+    width   : 100%;
+    height  : 100%;
+
 }
