--- a/style.css
+++ b/style.css
@@ -202,6 +202,7 @@ button:active {
     text-align      : center;
     border          : 2px solid black;
     background-color: coral;
+    z-index         : 3;
 }
 
 .move-down {
@@ -237,7 +238,7 @@ button:active {
     left    : 0;
     width   : 100%;
     height  : 100%;
-
+    z-index : 3;
 }
 
 .rotate-horiz-gun {
@@ -255,4 +256,25 @@ button:active {
 .shoot-horiz-gun {
     transform : translateX(-10px);
     transition: transform 1s cubic-bezier(0.1, -0.6, 0.2, 0);
+}
+
+.fire-container {
+    position       : absolute;
+    width          : 25px;
+    height         : 45px;
+    top            : 40px;
+    left           : 40px;
+    background-size: 500px;
+    z-index        : 2;
+}
+
+.explosion-container {
+    position         : absolute;
+    width            : 50px;
+    height           : 50px;
+    top              : 40px;
+    left             : 40px;
+    background-size  : 500px;
+    background-repeat: no-repeat;
+    z-index          : 2;
 }
