--- a/style.css
+++ b/style.css
@@ -197,17 +197,28 @@ button:active {
 }
 
 .end-game-block {
-    position        : absolute;
-    border-radius   : 5px;
-    width           : 500px;
-    height          : 300px;
-    top             : -500px;
-    left            : 400px;
-    font-weight     : bold;
-    text-align      : center;
-    border          : 2px solid black;
-    background-color: coral;
-    z-index         : 3;
+    position                                          : absolute;
+    border-radius                                     : 5px;
+    width                                             : 500px;
+    height                                            : 300px;
+    top                                               : -500px;
+    left                                              : 400px;
+    font-weight                                       : bold;
+    text-align                                        : center;
+    border                                            : 8px double black;
+    background-color                                  : coral;
+    z-index                                           : 3;
+    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ffb76b+0,ffa73d+50,ff7c00+51,ff7f04+100;Orange+Gloss */
+    background                                        : rgb(255, 183, 107);
+    /* Old browsers */
+    background                                        : -moz-linear-gradient(45deg, rgba(255, 183, 107, 1) 0%, rgba(255, 167, 61, 1) 50%, rgba(255, 124, 0, 1) 51%, rgba(255, 127, 4, 1) 100%);
+    /* FF3.6-15 */
+    background                                        : -webkit-linear-gradient(45deg, rgba(255, 183, 107, 1) 0%, rgba(255, 167, 61, 1) 50%, rgba(255, 124, 0, 1) 51%, rgba(255, 127, 4, 1) 100%);
+    /* Chrome10-25,Safari5.1-6 */
+    background                                        : linear-gradient(45deg, rgba(255, 183, 107, 1) 0%, rgba(255, 167, 61, 1) 50%, rgba(255, 124, 0, 1) 51%, rgba(255, 127, 4, 1) 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter                                            : progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffb76b', endColorstr='#ff7f04', GradientType=1);
+    /* IE6-9 fallback on horizontal gradient */
 }
 
 .move-down {
@@ -306,7 +317,7 @@ button:active {
     top                                               : 350px;
     left                                              : 33%;
     width                                             : 600px;
-    min-height                                        : 330px;
+    min-height                                        : 40vh;
     padding                                           : 20px;
     /*background-color                                : rgba(167, 183, 185, 0.7);*/
     border                                            : 8px double;
@@ -332,12 +343,19 @@ button:active {
     color      : white;
 }
 
+.menu span {
+    width      : 100%;
+    font-size  : 15px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    color      : yellowgreen;
+}
+
 
 .menu button {
     display    : block;
     min-width  : 200px;
     max-width  : 200px;
-    height     : 100px;
+    height     : 10vh;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size  : 30px;
     margin     : 30px;
@@ -360,4 +378,38 @@ button:active {
     background-position: 0 -150px;
     background-size    : 100%;
     background-repeat  : no-repeat;
+}
+
+.block {
+    min-width    : 50%;
+    margin-bottom: 40px;
+}
+
+.block select {
+    min-width       : 150px;
+    font-size       : 15px;
+    font-family     : Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    background-color: yellowgreen;
+    color           : rebeccapurple;
+}
+
+.content-wrapper {
+    display      : flex;
+    flex-wrap    : wrap;
+    width        : 100%;
+    margin-bottom: 30px;
+    padding-left : 20px;
+}
+
+.menu .back-to-main-menu {
+    width           : 150px;
+    height          : 60px;
+    font-size       : 25px;
+    background-color: white;
+    transition      : background-color 0.5s;
+}
+
+.menu .back-to-main-menu:hover {
+    background-color: yellow;
+    transition      : background-color 0.5s;
 }
