--- a/style.css
+++ b/style.css
@@ -404,12 +404,20 @@ button:active {
 }
 
 .menu .back-to-main-menu {
-    width    : 150px;
-    height   : 60px;
-    font-size: 25px;
-
+    width     : 150px;
+    height    : 60px;
+    font-size : 25px;
+    margin-top: 0px;
 }
 
 input {
     transform: scale(1.3);
+}
+
+select {
+    transform: scale(1.1);
+}
+
+option {
+    font-size: 17px;
 }
