changes in main menu and settings

--- a/style.css
+++ b/style.css
@@ -338,20 +338,6 @@ button:active {
     align-items: flex-end;
 }
 
-.mute-button {
-    /*width              : 50px;
-    height             : 50px;
-    padding            : 5px;
-    background-image   : url('images/mute-button.png');
-    background-position: center;
-    background-size    : 30px;
-    background-repeat  : no-repeat;*/
-}
-
-.mute-button:hover {
-    background-color: white;
-}
-
 .menu {
     position                                          : absolute;
     display                                           : flex;
@@ -399,8 +385,8 @@ button:active {
     max-width  : 200px;
     height     : 10vh;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size  : 30px;
-    margin     : 30px;
+    font-size  : 3.5vh;
+    margin     : 3.5vh;
     padding    : 10px;
     opacity    : 0.9;
 }
@@ -421,6 +407,10 @@ button:active {
 .block {
     min-width    : 50%;
     margin-bottom: 40px;
+}
+
+.block.level {
+    position: relative;
 }
 
 .block select {
@@ -456,4 +446,14 @@ select {
 
 option {
     font-size: 17px;
+}
+
+.shadow {
+    position        : absolute;
+    top             : 62px;
+    left            : -8px;
+    background-color: rgba(0, 0, 0, 0.35);
+    width           : 165px;
+    height          : 23px;
+    border-radius   : 2px;
 }
